terraform/security.tf


# -----------------------------
# Security group for Web Server
# -----------------------------

resource "aws_security_group" "web_sg" {
  name        = "techbleat-web-sg"
  description = "Allow SSH, HTTP and HTTPS"

  # Allow SSH
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow HTTP
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow HTTPS
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow all outbound traffic
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "techbleat-web-sg"
  }
}


# -----------------------------
# Security group for Database
# -----------------------------

resource "aws_security_group" "db_sg" {
  name        = "techbleat-db-sg"
  description = "Allow PostgreSQL only from Web Server"

  # Allow PostgreSQL
  ingress {
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [aws_security_group.web_sg.id]
  }

  # Allow all outbound traffic
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "techbleat-db-sg"
  }
}
